<resources>
    <string name="app_name">Cat Quiz</string>
    <string name="max_questions_toast">Max number of questions</string>
    <string name="min_questions_toast">Min number of questions</string>
    <string name="choose_difficulty_toast">Please choose a difficulty setting</string>
    <string name="quiz_name">Cat Quiz</string>
    <string name="options">Options:</string>
    <string name="name">Name</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="level_easy">Kitten</string>
    <string name="level_medium">Street Cat</string>
    <string name="level_hard">Cattenborough</string>
    <string name="number_of_questions">Number of Questions:</string>
    <string name="start_quiz_button">Start Quiz</string>
    <string name="displayMessage">Well Done!</string>
    <string name="send_score_button">Send Score</string>
    <string name="play_again_button">Play Again</string>
    <string name="you_scored">You Scored:</string>
    <string name="question_1">Question 1.</string>
    <string name="question_E1">What do you call a male cat?</string>
    <string name="question_2">Question 2.</string>
    <string name="question_E2">How many lives is a cat commonly said to have?</string>
    <string name="question_3">Question 3.</string>
    <string name="question_E3">A cats\' diet makes it a..</string>
    <string name="herbivore">Herbivore</string>
    <string name="omnivore">Omnivore</string>
    <string name="carnivore">Carnivore</string>
    <string name="question_4">Question 4.</string>
    <string name="question_E4">Which of these senses are enhanced in cats compared with humans?</string>
    <string name="select_all_checkboxes">(You must select all correct answers to win the point.)</string>
    <string name="smell">Smell</string>
    <string name="sight_in_low_light">Sight in low light</string>
    <string name="touch">Touch</string>
    <string name="hearing">Hearing</string>
    <string name="taste_for_sweet_foods">Taste for sweet foods</string>
    <string name="question_5">Question 5.</string>
    <string name="question_6">Question 6.</string>
    <string name="question_7">Question 7.</string>
    <string name="question_8">Question 8.</string>
    <string name="question_9">Question 9.</string>
    <string name="question_10">Question 10.</string>
    <string name="question_E5">Cats have retractable claws:</string>
    <string name="a_true">True</string>
    <string name="a_false">False</string>
    <string name="restart_button">Restart</string>
    <string name="next_button">Next</string>
    <string name="jack">Jack</string>
    <string name="tom">Tom</string>
    <string name="dave">Dave</string>
    <string name="prince">Prince</string>
    <string name="toast_answer_all_questions">Answer all questions to continue</string>
    <string name="questions1_5">Questions 1–5 of \u0020</string>
    <string name="questions6_10">Questions 6–10 of \u0020</string>
    <string name="submit_button">Submit</string>

    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
    <string name="results_Q1">Question 1: \u0020</string>
    <string name="results_Q2">Question 2: \u0020</string>
    <string name="results_Q3">Question 3: \u0020</string>
    <string name="results_Q4">Question 4: \u0020</string>
    <string name="results_Q5">Question 5: \u0020</string>
    <string name="results_Q6">Question 6: \u0020</string>
    <string name="results_Q7">Question 7: \u0020</string>
    <string name="results_Q8">Question 8: \u0020</string>
    <string name="results_Q9">Question 9: \u0020</string>
    <string name="results_Q10">Question 10: \u0020</string>
    <string name="results_message">Here is a summary of how you did:</string>
    <string name="email_title">Cat Quiz Score for \u0020</string>
    <string name="result_banner1">Catastrophic Failure!</string>
    <string name="result_banner2">Try Harder!</string>
    <string name="result_banner3">Not Bad</string>
    <string name="result_banner4">Well done!</string>
    <string name="result_banner5">Puuuuurrrfect!!</string>
</resources>
