<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.catquiz.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:background="@color/white"
            android:src="@drawable/cats" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:fontFamily="@font/catfont"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/quiz_name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="56sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/options"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="16dp"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="10dp">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape2"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/difficulty_level"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:paddingLeft="24dp"
                    android:text="@string/level_easy"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:paddingLeft="24dp"
                    android:text="@string/level_medium"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:paddingLeft="24dp"
                    android:text="@string/level_hard"
                    android:textSize="16sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="16dp"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:background="@drawable/shape3"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_questions"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/subbutton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/next_button_blue"
                    android:onClick="decrement"
                    android:text="-"
                    android:textSize="24sp" />


                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:text="5"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/addbutton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/next_button_blue"
                    android:onClick="increment"
                    android:text="+"
                    android:textSize="24sp" />
            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/next_button"
            android:onClick="startQuiz"
            android:text="@string/start_quiz_button"
            android:textSize="16sp" />


    </LinearLayout>
</ScrollView>

