<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.catquiz.ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/banner_E1"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:scaleType="centerCrop"
            android:src="@drawable/kit2" />


        <TextView
            android:id="@+id/judgement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/hot_pink"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/displayMessage"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/nameTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="Player Name"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/you_scored"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/scorePercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/score_bubble"
                android:gravity="center"
                android:text="0%"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/numOfCorrectAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="8dp"
                android:text="With 0 out of 0 correct answers"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/resultsSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="8dp"
                android:text="results"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/shareScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/restart_button"
                android:onClick="shareScore"
                android:text="@string/send_score_button"
                android:textSize="16sp" />

            <Button
                android:id="@+id/restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/next_button"
                android:onClick="restart"
                android:text="@string/play_again_button"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>